# zynopy

./: .gitignore  README.md  pyproject.toml
deruck_py/utils/: argument.py  base_arguments.py  json_utils.py
setups/: install_conda.sh
utils/: base_arguments.py
zenopy/utils/: argument.py  json_utils.py
zynopy/utils/: json.py
