[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zynopy"
version = "0.0.1"
description = "zynopy"
readme = "README.md"
authors = [{name="zyneo", email="zyneojiang@outlook.com"}]
requires-python = ">=3.10"
dependencies = [
    "pydantic"
]
